<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_home"
        android:title="@string/menu_home"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_my_events"
        android:title="@string/menu_my_events"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menu_my_friends"
        android:title="@string/menu_my_friends"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menu_add_friend"
        android:title="@string/menu_add_friend"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menu_log_out"
        android:title="@string/menu_log_out"
        app:showAsAction="never"/>

</menu>