<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInActivity"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:background="#000000"
        android:orientation="horizontal"
        android:paddingLeft="24dp"
        android:paddingTop="24dp"
        android:paddingBottom="24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_an_account"
            android:textColor="@color/white"
            android:textSize="28sp" />

    </LinearLayout>

    <EditText
        android:id="@+id/sign_in_username"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:hint="@string/username"
        android:layout_marginTop="200dp"
        android:inputType="textPersonName"/>

    <EditText
        android:id="@+id/sign_in_email"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginBottom="24dp"
        android:hint="@string/email"
        android:inputType="textWebEmailAddress" />

    <EditText
        android:id="@+id/sign_in_password"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginBottom="24dp"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sign_in_set_profile_photo_button"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:background="@color/black"
        android:text="@string/add_profile_pic"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/sign_in_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/or"
        android:textColor="#81000000" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sign_in_save_button"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:background="@color/buttonGreen"
        android:text="Sign Up"
        android:textColor="#000000" />

    <com.theartofdev.edmodo.cropper.CropImageView xmlns:custom="http://schemas.android.com/apk/res-auto"
        android:id="@+id/cropImageView"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="130dp"
        android:layout_height="0dp"
        android:layout_weight="1"/>


</LinearLayout>