<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInActivity"
    android:orientation="vertical">

    <EditText
        android:id="@+id/sign_in_username"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:layout_marginTop="200dp"
        android:layout_gravity="center_horizontal"
        android:inputType="textPersonName"/>

    <EditText
        android:id="@+id/sign_in_email"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:hint="email"
        android:layout_gravity="center_horizontal"
        android:inputType="textWebEmailAddress"/>

    <EditText
        android:id="@+id/sign_in_password"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_gravity="center_horizontal" />

    <Button
        android:id="@+id/sign_in_set_profile_photo_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/set_profile_photo"
        android:textColor="@color/lightGreen"/>


    <com.theartofdev.edmodo.cropper.CropImageView
        xmlns:custom="http://schemas.android.com/apk/res-auto"
        android:id="@+id/cropImageView"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="130dp"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/sign_in_save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/sign_in" />

</LinearLayout>