<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".createeventpg.CreateEventMain"
    android:orientation="vertical">

    <View
        android:layout_width="wrap_content"
        android:layout_height="60dp"/>

    <include layout="@layout/enter_event_name_section" />

    <include layout="@layout/enter_event_date_section"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selectMembersUnderlined"
            android:id="@+id/select_members_text_view"
            android:textColor="@color/buttonGreen"
            android:textSize="20sp"
            android:layout_gravity="start"
            android:layout_marginStart="15dp"
            android:textStyle=""
            android:paddingTop="20dp"
            android:paddingBottom="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/number_members_selected"
            android:text="@string/numberSelected"
            android:layout_toEndOf="@id/select_members_text_view"
            android:textColor="@color/buttonGreen"
            android:textSize="20sp"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"/>

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addPhoto"
        android:id="@+id/add_photo_text_view"
        android:textColor="@color/buttonGreen"
        android:textSize="20sp"
        android:layout_gravity="start"
        android:layout_marginStart="15dp"
        android:padding="5dp"
        android:textStyle=""
        android:layout_marginLeft="15dp" />

    <FrameLayout
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal">

        <com.theartofdev.edmodo.cropper.CropImageView
            android:id="@+id/cropImageView"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="130dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

    </FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="150dp"/>


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/darkGreen"
        android:layout_gravity="center"
        android:layout_margin="10dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/createEventButton"
            android:background="?selectableItemBackground"
            android:padding="5dp"
            android:id="@+id/create_event_button"
            android:layout_centerInParent="true">

        </Button>
    </RelativeLayout>


</LinearLayout>