<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".createeventpg.CreateEventMain"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/selectMembersBold"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        android:padding="20dp"/>


    <androidx.appcompat.widget.SearchView
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:id="@+id/select_members_search_bar"
        android:layout_gravity="center_horizontal"
        android:background="@color/lightGrey"
        android:layout_margin="5dp"
        app:defaultQueryHint="@string/searchForName"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxHeight="80dp"
        android:textSize="20sp"
        android:padding="5dp"/>


    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="370dp"
        android:orientation="vertical"
        android:id="@+id/select_members_recycler_view"
        android:padding="5dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

    </androidx.recyclerview.widget.RecyclerView>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/darkGreen2"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        android:id="@+id/select_members_save_button_container">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/select_members_done_button"
            android:text="@string/doneButton"
            android:background="?selectableItemBackground"/>

    </FrameLayout>

</LinearLayout>